hidden overflow-x to avoid phone view issues

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   height: 100%;
   width: 100%;
   margin: 0;
+  overflow-x:hidden;
 }
 
 .full-height {
@@ -44,14 +45,14 @@ a {
   background: rgba(0, 0, 0, 0.5);
 }
 
-.logo i {
+.logo  i{
   color: #b2d3eb;
-  width: 100%;
+    width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   margin-right: auto;
-  margin-left: 2vw;
+  padding-left: 2vw;
   font-size: 2rem;
 }
 
@@ -59,7 +60,7 @@ a {
   display: flex;
   margin-left: auto;
   list-style-type: none;
-  margin-right: 2vw;
+  padding-right: 2vw;
 }
 
 .nav-list a {
